# local-agentic

./: .coverage  .env  ADK_TESTING_GUIDE.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  demo.py  env.example  example_meeting_notes.txt  pyproject.toml  reinit_db.py  run_task_manager.py  setup.py  start_a2a_server.py  start_mcp_server.py  test_adk_integration.py  test_adk_tools.py  test_end_to_end_delegation.py  test_task_delegation.py  test_task_manager.py  test_tool_calling.py
agents/: __init__.py  base_agent.py  meeting_assistant_agent.py  task_manager_agent.py
cli/: __init__.py  meeting_assistant_cli.py  task_manager_cli.py
data_store/: __init__.py  task_store.py
mcp_server/: __init__.py  task_mcp_server.py  tools.py
meeting_assistant_agent/: agent.py  app.yaml
protocols/: __init__.py  a2a_server.py  mcp_client.py
scripts/: README.md  health_check.py  quick_test.py  run_demo.py  start_all.py  start_env.py  stop_all.py  stop_env.py
task_manager_agent/: agent.py  app.yaml
tests/: __init__.py  test_agents_with_mistral.py  test_end_to_end.py  test_env_file.py  test_meeting_assistant.py  test_simple_agent_verification.py  test_task_manager.py
